changed edge thickness

--- a/js/fancybox/jquery.fancybox.css
+++ b/js/fancybox/jquery.fancybox.css
@@ -51,7 +51,7 @@
 
 .fancybox-error {
 	color: #444;
-	font: 14px/20px "Helvetica Neue",Helvetica,Arial,sans-serif;
+	font: 14px/20px 'Roboto', sans-serif;
 	margin: 0;
 	padding: 10px;
 }
