--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ html,body {
 	height: 100%;
 	top: 0;
 	left: 0;
-	background-color: #232323;
+	background-color: #2E2E2E;
 	background-position: center center;
 	background-repeat: no-repeat;
 	-webkit-touch-callout: none;
